2015-11-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c:
	  Fix operandsNotRelated() bug #2435.

2015-11-26 Ben Shi <powerstudio1st AT 163 DOT com>
	* support/regression/tests/gcc-torture-execute-20050111-1.c
	* support/regression/tests/gcc-torture-execute-950511-1.c
	  Disable test cases.

2015-11-24 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCicode.c
	* src/SDCCval.c
	* src/SDCCval.h
	  Improve long long multiplication.
	* support/regression/tests/gcc-torture-execute-20050111-1.c
	* support/regression/tests/gcc-torture-execute-950511-1.c
	* support/regression/tests/longlong.c
	  Improve test cases.

2015-11-14 Philipp Klaus Krause <pkk AT spth.de>

	* doc/Makefile.in,
	  doc/sdccman.lyx:
	  Fix bookmarks and hyperlinks in manual, bug #2405.
	* src/SDCCglue.c:
	  Drop build time in asm output to ease reproducible builds.
	* device/lib/*/Makefile.in,
	  device/lib/Makefile.in:
	  Drop build time in sdar calls to make non-pic lib builds reproducible.

2015-11-13 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/cpp/libcpp/include/symtab.h:
	  Fix build failure on MacOS x86-64.
	* support/regression/tests/inline.c:
	  Fix failure in test-host in NetBSD.
	* support/regression/tests/literalop.c:
	  Disable some tests on MacOS x86-64.

2015-11-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/at89c51id2.h: moved

2015-11-12 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Update standard compliance documentation.

2015-11-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/at89c51ed2.h: applied patch 247
	* device/include/at89c51id2.h: new, added, thanks Victor Munoz
	* src/SDCC.lex: it seems really hard not to declare vars amidst the code
	* src/SDCCast.c (expandInlineFuncs): fix bug 2295: also expand for clauses
	* support/regression/tests/ctype.c: warn about undefined __STDC_VERSION__
	* support/regression/tests/inline.c (bug_2295): new test case
